fast-builder/libplsdk/Makefile: add libplhw.a
The Plastic Logic hardware user-side library libplhw is
now part of the PLSDK package, so it's added to the
libplsdk.so shared library.

--- a/fast-builder/libplsdk/Makefile
+++ b/fast-builder/libplsdk/Makefile
@@ -2,7 +2,7 @@ include $(BUILDER_HOME)/builder.mk
 
 CFLAGS += -O2
 LDFLAGS += -ldl
-libs := libplepaper.a libpldraw.a libplinput.a
+libs := libplepaper.a libpldraw.a libplinput.a libplhw.a
 out := libplsdk.so
 
 $(LIBDIR)/%.so:
