plsdk.ini: add TPS65185 + fix typos

--- a/plsdk.ini
+++ b/plsdk.ini
@@ -44,10 +44,13 @@
 #  Path to the user-side interface to the I2C bus.
 #i2c-bus=/dev/i2c-0
 
-# MAX17135 HVPMIC I2C address
+# MAX17135 HV-PMIC I2C address
 #MAX17135-address=0x48
 
-# MAX5820 ADC I2C address
+# TPS65185 HV-PMIC I2C address
+#TPS65185-address=0x68
+
+# MAX5820 DAC I2C address
 #MAX5820-address=0x39
 
 # MAX11606-MAX11611 ADC I2C address
